[gd_scene load_steps=6 format=3 uid="uid://07hw1rhrbnxq"]

[ext_resource type="Script" path="res://scripts/loading.gd" id="1_oxtec"]
[ext_resource type="FontFile" uid="uid://eh1nc54sujt3" path="res://assets/fonts/rubik/Rubik-Black.ttf" id="2_kuq61"]
[ext_resource type="Texture2D" uid="uid://mtjypj4p7ags" path="res://assets/gui/Load/Magazine/Top.png" id="3_sey3u"]
[ext_resource type="Texture2D" uid="uid://bou7cmsgy0l7e" path="res://assets/gui/Load/ProgressBar_fill.png" id="4_4djwi"]
[ext_resource type="AudioStream" uid="uid://c11a87hdbd8y" path="res://assets/audio/effects/loading_sound.wav" id="5_2erh1"]

[node name="Background2" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.196078, 0.180392, 0.184314, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.0
offset_top = -66.0
offset_right = 283.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oxtec")

[node name="Title" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_kuq61")
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[center]Loading..."
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ProgressBar" type="TextureProgressBar" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_over = ExtResource("3_sey3u")
texture_progress = ExtResource("4_4djwi")
texture_progress_offset = Vector2(20, 11)

[node name="Timer" type="Timer" parent="VBoxContainer"]
wait_time = 0.05
autostart = true

[node name="ProgressSound" type="AudioStreamPlayer2D" parent="VBoxContainer"]
stream = ExtResource("5_2erh1")

[connection signal="timeout" from="VBoxContainer/Timer" to="VBoxContainer" method="_on_timer_timeout"]
